# yank

./: .gitignore  .syncignore  IMPLEMENTATION_PLAN.md  LICENSE  README.md  agent.py  build.ps1  build.sh  config.py  install-startup.ps1  macrun.sh  main.py  pyproject.toml  requirements.txt  run.ps1  run.sh  setup.ps1  setup.sh  test_service_e2e.py  test_simulation.py  yank.spec
.github/workflows/: release.yml
common/: chunked_transfer.py  crypto.py  discovery.py  file_registry.py  pairing.py  protocol.py  singleton.py  transfer_manager.py  user_config.py
hooks/: hook-yank-console.py
macos/: __init__.py  clipboard.py
src/yank/: __init__.py  agent.py  config.py  main.py
src/yank/common/: __init__.py  chunked_transfer.py  discovery.py  errors.py  file_registry.py  pairing.py  protocol.py  service_manager.py  singleton.py  syncignore.py  transfer_manager.py  user_config.py
src/yank/platform/: __init__.py  base.py
src/yank/platform/linux/: __init__.py  clipboard.py  service.py  virtual_clipboard.py
src/yank/platform/macos/: clipboard.py  launchd.plist  service.py  virtual_clipboard.py
src/yank/platform/windows/: __init__.py  clipboard.py  service.py
src/yank/ui/: __init__.py  app.py  drawer.py  signals.py  tray.py
tests/: conftest.py
tests/fixtures/: mock_clipboard.py
tests/unit/: test_crypto.py  test_protocol.py  test_service_status.py  test_transfer_manager.py  test_user_config.py
windows/: clipboard.py  service.py  virtual_clipboard.py
winget/: nasiridrishi.Yank.installer.yaml  nasiridrishi.Yank.locale.en-US.yaml  nasiridrishi.Yank.yaml
